force-app/main/default/objects/Expense__c/fields/Is_High_Expense__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is High Expense</label>
    <type>Checkbox</type>
</CustomField>