force-app/main/default/objects/Expense__c/fields/Month_Total__c.field-meta.xml
<CustomField>
    <fullName>Month_Total__c</fullName>
    <label>Month Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>