force-app/main/default/objects/Expense__c/validationRules/Prevent_Save_if_Amount_less_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Save_if_Amount_less_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount can not be less than 0.</errorMessage>
</ValidationRule>